# finance-crew

./: .gitignore  CONTRIBUTING.md  GUIDE.md  README.md  pyproject.toml  run.sh
data/: cli-default.json
src/finance_crew/: crew.py  main.py
src/finance_crew/app/: 01_👋_Home.py  Home.py  app.py
src/finance_crew/app/components/content/: disclaimer.py  fstring_warning.py  home_grid.py  mermaid_diagram.py  no_results_warning.py  project_description.py  reference_links.py
src/finance_crew/app/components/input/: parameters.py
src/finance_crew/app/components/output/: analysis_result.py  download_buttons.py
src/finance_crew/app/components/settings/: agent.py  keys.py  manager.py  tasks.py
src/finance_crew/app/pages/: 02_🤔_About.py  03_✨_Analysis.py  04_👀_Results.py  05_⚙_Settings.py  Analysis.py  Description.py  Results.py  Settings.py
src/finance_crew/app/utils/: api_validators.py  run_analysis.py
src/finance_crew/cli/: input_handler.py  main.py  output_handler.py  ui.py  utils.py
src/finance_crew/config/: agents.yaml  crew.yaml  tasks.yaml
src/finance_crew/utils/: load_configs.py  utils.py
