[tool.poetry]
name = "finance_crew"
version = "0.1.0"
description = "finance-crew using crewAI"
authors = ["Alex Nodelad <alex@ournature.studio>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {version = "^0.32.2", extras = ["tools"]}
agentops = "^0.2.3"
streamlit = "^1.36.0"

[tool.poetry.scripts]
finance-crew-cli = "finance_crew.main:run_cli"
finance-crew-app = "finance_crew.main:run_app"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"